fix z-indexes; sidebar > shade > navbar > *

--- a/src/main.css
+++ b/src/main.css
@@ -100,6 +100,7 @@
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.03);
   border-radius: 20px;
   margin: 10px;
+  z-index: 1;
 }
 
 .show-chat .nav-bar-top {
@@ -368,7 +369,7 @@ a.call img {
     position: fixed;
     top: 0;
     bottom: 0;
-    z-index: 2;
+    z-index: 3;
     border-radius: 0;
     margin: 0;
     left: 0;
@@ -414,7 +415,7 @@ a.call img {
   .mobile-shade {
     display: block;
     background: rgb(0 0 0 / 30%);
-    z-index: 1;
+    z-index: 2;
     position: fixed;
     height: 100vh;
     width: 100vw;
